<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/GrisCaucho">

    <LinearLayout
        android:id="@+id/ColorBase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@color/black"
        android:gravity="center|top"
        >

        <LinearLayout
            android:id="@+id/Logo"
            android:layout_width="280dp"
            android:layout_height="280dp"

            >

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ima"
                android:src="@drawable/blackdimondlogo"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/bienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welc"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/copperplateregular"
            android:textSize="23sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/CartaLog"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:background="@color/GrisCaucho"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/LOG"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/copperplateregular"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center|top"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Us"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/copperplateregular"
                        />

                    <EditText
                        android:id="@+id/User"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/black"
                        android:fontFamily="@font/copperplateregular"
                        android:hint="@string/InputUser"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/GrisCaucho"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center|top"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Pas"
                        android:textColor="@color/white"
                        android:fontFamily="@font/copperplateregular"
                        />

                    <EditText
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/black"
                        android:fontFamily="@font/copperplateregular"
                        android:hint="@string/InputPass"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/GrisCaucho"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingTop="16dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/aceptar"
                android:layout_width="115dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/Acept"
                android:textColor="@color/white"
                android:fontFamily="@font/copperplateregular"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</LinearLayout>