<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ver"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ver"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/GrisCaucho"
        android:layout_gravity="center"
        android:layout_margin="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="10sp"
            android:background="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/PK"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:background="@color/white"
                    android:textAlignment="center"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/Cost"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/CostTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/Hmuch"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/HowMuch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/color"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/ColorProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/FRecive"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/DateRecive"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/FSolid"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/DateSolid"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/details"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/Client"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/Clients"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/Product"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/Employend"
                    android:fontFamily="@font/copperplateregular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/Empleyoment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:backgroundTint="@color/Rojo"
                android:text="@string/DEL"
                android:fontFamily="@font/copperplateregular"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>