<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/GrisCaucho"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:background="@color/black"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/bienvenida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/men"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:fontFamily="@font/copperplateregular"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20sp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="100sp"
                        android:backgroundTint="@color/GrisCaucho"
                        android:text="@string/arg"
                        android:fontFamily="@font/copperplateregular"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:layout_margin="10sp"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="100sp"
                        android:backgroundTint="@color/GrisCaucho"
                        android:layout_margin="10sp"
                        android:text="@string/act"
                        android:fontFamily="@font/copperplateregular"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:backgroundTint="@color/GrisCaucho"
                    android:layout_margin="10dp"
                    android:text="@string/vr"
                    android:fontFamily="@font/copperplateregular"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    >
                </Button>


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>





</LinearLayout>